Fixed z-index navbar

--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,7 @@ body {
     width: 100%;
     position: fixed;
     top: 0;
+    z-index: 1;
 }
 
 .navbar > .navbar-list {
